# MediaIsland

./: .gitignore  MediaIsland.csproj  MediaIsland.sln  Plugin.cs  README.md  manifest.yml
.github/workflows/: build.yml
Components/: NowPlayingComponent.xaml  NowPlayingComponent.xaml.cs
Helpers/: IconHelper.cs
MediaIsland/: MediaIsland.csproj  Plugin.cs  README.md  ThirdPartyLicenses.txt  manifest.yml
MediaIsland.Debugger/: MediaIsland.Debugger.csproj  Program.cs
MediaIsland.Tests/: AmllTtmlLyricsProviderTests.cs  InterludeDotsPresenterTests.cs  LyricsCandidateScorerTests.cs  LyricsComponentConfigTests.cs  LyricsDocumentNormalizerTests.cs  LyricsInterludeDetectorTests.cs  LyricsLayoutMetricsTests.cs  LyricsLineSelectorTests.cs  LyricsProviderResponseTests.cs  LyricsSearchServiceTests.cs  LyricsSearchSkipTrackerTests.cs  LyricsSourceSettingsTests.cs  ManagedLyricsPayloadParserTests.cs  MediaIsland.Tests.csproj  MediaSourceDisplayServiceTests.cs  MediaSourceFilterTests.cs  PluginSettingsTests.cs  WordLyricsPresenterTests.cs
MediaIsland.Tests/Lyrics/: AmllTtmlLyricsProviderTests.cs  InterludeDotsPresenterTests.cs  LyricsCandidateScorerTests.cs  LyricsComponentConfigTests.cs  LyricsDisplayTextTests.cs  LyricsDocumentNormalizerTests.cs  LyricsInterludeDetectorTests.cs  LyricsLayoutMetricsTests.cs  LyricsLineSelectorTests.cs  LyricsProviderResponseTests.cs  LyricsSearchServiceTests.cs  LyricsSearchSkipTrackerTests.cs  (+4 more)
MediaIsland.Windows/: MediaIsland.Windows.csproj
Tools/: Publish.ps1
native/ttml-ffi/: Cargo.toml
native/ttml-ffi/src/: lib.rs
(+97 files in other folders)
